packages/frontend/src/components/SettingsValidator/ValidatorTable/ValidatorTable.module.css
.paper {
    border: 1px solid var(--mantine-color-ldGray-2);
    border-radius: var(--mantine-spacing-sm);
    box-shadow: var(--mantine-shadow-subtle);
    display: flex;
    flex-direction: column;

    @mixin dark {
        border-color: var(--mantine-color-ldDark-4);
    }
}

.tableContainer {
    max-height: calc(100dvh - 370px);
}

.headerRow {
    box-shadow: none;
}

.headerCell {
    padding: var(--mantine-spacing-xs) var(--mantine-spacing-md);
    background-color: var(--mantine-color-ldGray-0);
    font-weight: 600;
    font-size: var(--mantine-font-size-xs);
    justify-content: center;

    @mixin dark {
        background-color: var(--mantine-color-ldDark-6);
    }
}

.headerCell:last-of-type {
    border-left: none !important;
}

.bodyCell {
    padding: var(--mantine-spacing-xs) var(--mantine-spacing-md);
    font-size: var(--mantine-font-size-xs);
    color: var(--mantine-color-ldGray-7);

    @mixin dark {
        color: var(--mantine-color-ldGray-3);
    }
}

.bodyCell:last-of-type {
    border-left: none !important;
}

.row {
    cursor: default;
}

.pinnedRow {
    border-left: 3px solid var(--mantine-color-yellow-5);
    animation: highlight 4s ease-in-out 2;
}

.pinnedRow td:first-child {
    padding-left: calc(var(--mantine-spacing-md) - 3px);
}

@keyframes highlight {
    0% {
        background-color: transparent;
    }
    50% {
        background-color: var(--mantine-color-yellow-1);
    }
    100% {
        background-color: transparent;
    }
}

@mixin dark {
    @keyframes highlight {
        0% {
            background-color: transparent;
        }
        50% {
            background-color: var(--mantine-color-yellow-9);
        }
        100% {
            background-color: transparent;
        }
    }
}

.anchor {
    color: unset;
}

.anchor:hover {
    color: unset;
    text-decoration: none;
}

